      swapped back such that checking for \code{"denseMatrix"} again only
      happens when the option is true.  The defaults have been swapped to
      \code{TRUE} for  \code{diagU2N()} and \code{diagN2U()} whereas the
      default \code{checkDense = FALSE} remains for the faster low-level
      versions \code{.diagU2N()} and \code{.diagN2U()}.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item \proglang{C} code uses new (since \R{} 4.4.0) \code{OBJSXP}
      in place of deprecated \code{S4SXP} and \code{TYPEOF(.) == OBJSXP}
      in place of (not specific enough) \code{isS4(.)}.

      \item \proglang{C} code is simplified using definitions in new
      header \file{M5.h} for templated dispatch on object \dQuote{kind}
      \samp{[nlidz]}.

      \item \file{test-tools-1.R}: update \code{relErrV()}, and use it
      and \code{relErr()} unconditionally to improve strict
      reproducibility.
    }
  }
}

\section{Changes in version 1.7-4 (2025-03-16, svn r5140)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item Methods for \code{band}, \code{triu}, and \code{tril} with
      signature \code{x="matrix"} returned a formally invalid
      \code{.geMatrix} (with \code{x} slot of class \code{"matrix"}) in
      some no-op cases, where no bands are set to zero.
    }
  }
}

\section{Changes in version 1.7-3 (2025-03-05, svn r5126)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item \code{<matrix>} \code{o} \code{<sparseVector>} binary
      \code{"Ops"} work again, returning a matrix (of \code{"Matrix"}).

      \item \code{- new("lgeMatrix")} and more \code{ - <Matrix>} now work.

      \item Use \code{int} instead of \code{Rboolean} in 2x2 cases in \file{utils-R.c}.
    }
  }
}

\section{Changes in version 1.7-2 (2025-01-20, svn r5115)}{
  \subsection{Installation}{
    \itemize{
      \item \pkg{Matrix} can be installed with parallel \command{bmake}.
      Thanks to Sebastian Meyer for the report and patch in \MPR{6861}.
    }
  }
  \subsection{Misc}{